--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="https://bc-marburg.de/wp-content/uploads/2018/09/1819-P-Baker-jLaackman_ergebnis-390x390.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Hey there Code_Life {{name}}!</h1>
                         <hr class="star-light">
