--- a/templates/index.html
+++ b/templates/index.html
@@ -184,7 +184,7 @@
                                 
                             
                                 <li>
-                                <a href="https://github.com/Baker17" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/Baker17" class=btn-social btn-outline target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
