--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="https://bc-marburg.de/wp-content/uploads/2018/09/1819-P-Baker-jLaackman_ergebnis-390x390.jpg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name"> Tonisha Baker {{name}}!</h1>
+                        <h1 class="name">  {{name}}!</h1>
                         <hr class="star-light">
                         <span class="skills">Python Developer - Flask Framework</span>
                     </div>
