--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i> 
                 </button>
-                <a class="navbar-brand" href="#page-top">CP Flask App</a>
+                <a class="navbar-brand" href="#page-top">Portfolio App</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -147,7 +147,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I love the Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
+                    <p>This app qas created using the flask framwork Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
                 </div>
                 <div class="col-lg-4">
                     <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
