--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                     <div class="intro-text">
                         <h1 class="name"> Tonisha Baker {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">Python Developer - Flask Framework</span>
+                        <span class="skills">Python Developer - Django Framework</span>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>This app qas created using the flask framwork Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
+                    <p>This app was created using the flask framwork Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
                 </div>
                 <div class="col-lg-4">
                     <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
