--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/IMG_0716.jpg" class="img-responsive" alt="Circus tent">
+                        <p>Todo List App</p>
                     </a>
                 </div>      
             </div>
