--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <p>Movie Web App</p>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/" class="img-responsive" alt="Slice of cake">
+                        <p>Blog App</p>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
